src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Short</fullName>
        <description>Sellers with short TAT profiles</description>
        <isActive>true</isActive>
        <values>
            <fullName>Candidate For Onboarding</fullName>
        </values>
        <values>
            <fullName>Go Live Checklist</fullName>
        </values>
        <values>
            <fullName>Invited</fullName>
        </values>
        <values>
            <fullName>Live</fullName>
        </values>
        <values>
            <fullName>Not Enough SKUs</fullName>
        </values>
        <values>
            <fullName>Pending Seller Approval</fullName>
        </values>
        <values>
            <fullName>Pending Stock Update</fullName>
        </values>
        <values>
            <fullName>Ready to Invite</fullName>
        </values>
        <values>
            <fullName>Registered</fullName>
        </values>
        <values>
            <fullName>Yet to Upload</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Also_Sells__c</fullName>
        <label>Also Sells</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attempts_Or_Delay_Days__c</fullName>
        <label>Attempts / Delay in Days</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BD_Action__c</fullName>
        <label>BD Action</label>
        <picklist>
            <picklistValues>
                <fullName>Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BD_Comments__c</fullName>
        <label>BD Comments</label>
        <picklist>
            <picklistValues>
                <fullName>Manpower shortage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response from seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping cost high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enough SKUs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD advised to pause</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Brand_List__c</fullName>
        <label>Brand List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Type__c</fullName>
        <label>Brand Type</label>
        <picklist>
            <picklistValues>
                <fullName>PrivateLabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultlBrand</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>ApplianceSmall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio MP3Player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babycare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CameraAccessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cameras and consumer electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Peripheral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footwear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming Console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty - Non Perfumes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty - Perfumes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeFurnishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kid&apos;s Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kid&apos;s Footwear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lenses</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Communication_Language_for_Seller__c</fullName>
        <label>Communication Language for Seller</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kannada</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Delay_Description__c</fullName>
        <description>Delay Description</description>
        <label>Delay Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delay_Reasons__c</fullName>
        <label>Delay Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Seller Not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Need More Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DisplayName__c</fullName>
        <label>DisplayName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Type__c</fullName>
        <label>Distributor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regional Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggregator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Expected_TAT__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Expected TAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fit_with_Flipkart_s_catalogue__c</fullName>
        <label>Fit with Flipkart&apos;s catalogue</label>
        <picklist>
            <picklistValues>
                <fullName>None of his Verticals are open in Flipkart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some of his Verticals are open in Flipkart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All of his Verticals are open in Flipkart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Go_Live_Approval__c</fullName>
        <label>Go Live Approval</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Go_Live_SKUs__c</fullName>
        <description>Expected SKUs this seller will have 1 month from go live</description>
        <inlineHelpText>Expected SKUs this seller will have 1 month from go live</inlineHelpText>
        <label>Go Live SKUs</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Printer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Printer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_VAT__c</fullName>
        <label>Has VAT</label>
        <picklist>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied For</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HighestEscalationPhone__c</fullName>
        <label>HighestEscalationPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hub_Name__c</fullName>
        <label>Hub Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imaging_Support__c</fullName>
        <label>Imaging Support</label>
        <picklist>
            <picklistValues>
                <fullName>Has Online Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Imaging Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsCommissionsExplained__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is he clear about his commissions for the categores he is selling</description>
        <inlineHelpText>Is he clear about his commissions for the categores he is selling</inlineHelpText>
        <label>IsCommissionsExplained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is seller available and willing to dedicate time from now till date of go live?</description>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Invited__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Represents Opportunity record sent for invitation or not</description>
        <label>Is Invited</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kyc_Document_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kyc Document Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadID__c</fullName>
        <label>LeadID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Go_Live_SKUs__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Min Go Live SKUs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Lead_Id__c</fullName>
        <label>Old Lead Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Type__c</fullName>
        <formula>ISPICKVAL( Account.Online_Experience__c , &apos;Never Before&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Others</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Capability__c</fullName>
        <label>Packaging Capability</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Capable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Packaging Training</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pickup_Pincode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup Pincode</label>
        <referenceTo>PincodeHubMapping__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pickup_Pincode_del__c</fullName>
        <label>Pickup Pincode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procurement_Type__c</fullName>
        <label>Procurement Type</label>
        <picklist>
            <picklistValues>
                <fullName>From Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just In Time</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Redirect_State__c</fullName>
        <description>Redirect State will come from CSV upload</description>
        <label>Redirect State</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revisit_Date__c</fullName>
        <label>Revisit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SS_Drop_Reasons__c</fullName>
        <label>SS Drop Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Seller Not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Too many reschedules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalogue - Template not ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Intent Shown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Unavailable-Personal Reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EKL - Hub Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enough SKUs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SS_Drop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Notes__c</fullName>
        <description>Notes to capture progress of seller etc.
Recommended format
&lt;date&gt;  &lt;note&gt;</description>
        <label>SS Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SS_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SS Account Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SS_Pause_Reason__c</fullName>
        <label>SS-Pause Reason</label>
        <picklist>
            <picklistValues>
                <fullName>EKL-Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller needs time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SS_Pause_Seller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS-Pause Seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Screening Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screening_Failure_Notes__c</fullName>
        <label>Screening Failure Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Seller_Business_Name__c</fullName>
        <label>Seller Business Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Id__c</fullName>
        <externalId>true</externalId>
        <label>Seller Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Need_More_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Seller Need More Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seller_Not_Reachable__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Seller Not Reachable</description>
        <label>Seller Not Reachable</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seller_Primary_Email__c</fullName>
        <label>Seller Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seller_Registration_Email__c</fullName>
        <externalId>true</externalId>
        <label>Seller Registration Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Size_of_Goods__c</fullName>
        <label>Size of Goods</label>
        <picklist>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stock_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the seller have enough stock to sell on date of go live?</description>
        <label>Stock Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SuperCategory__c</fullName>
        <label>SuperCategory</label>
        <picklist>
            <picklistValues>
                <fullName>Softlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TAT_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TAT Profile</label>
        <referenceTo>TAT_Profile__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Listings_Uploaded__c</fullName>
        <label>Total Listings Uploaded</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Approval__c</fullName>
        <label>Total Pending Approval</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Stock_Price__c</fullName>
        <label>Total Pending Stock-Price</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_QC_Failures__c</fullName>
        <label>Total QC Failures</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_QC_Pass__c</fullName>
        <label>Total QC Pass</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TraineeForListing__c</fullName>
        <description>Name, email, phone of trainee for listing/catalogue.</description>
        <inlineHelpText>Name, email, phone of trainee for listing/catalogue.</inlineHelpText>
        <label>TraineeForListing</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainee_for_Order_Mgmt__c</fullName>
        <inlineHelpText>Name, email, phone of person who should be trained for order mgmt.</inlineHelpText>
        <label>Trainee for Order Mgmt</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training1__c</fullName>
        <label>Training1 (Listings)</label>
        <picklist>
            <picklistValues>
                <fullName>Not Done</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training2_Policy_Payments__c</fullName>
        <label>Training2 (Policy + Payments)</label>
        <picklist>
            <picklistValues>
                <fullName>Not Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training3_OM_Returns_Disputes__c</fullName>
        <label>Training3 (OM Returns Disputes)</label>
        <picklist>
            <picklistValues>
                <fullName>Not Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_End_Date_Time__c</fullName>
        <label>Training End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Start_Date_Time__c</fullName>
        <label>Training Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllOpportunties</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Pickup_Pincode_del__c</columns>
        <columns>Seller_Id__c</columns>
        <columns>Seller_Business_Name__c</columns>
        <columns>Seller_Registration_Email__c</columns>
        <columns>Total_Listings_Uploaded__c</columns>
        <columns>Total_QC_Pass__c</columns>
        <columns>Total_QC_Failures__c</columns>
        <columns>Total_Pending_Approval__c</columns>
        <columns>Total_Pending_Stock_Price__c</columns>
        <columns>BD_Action__c</columns>
        <columns>SS_Pause_Seller__c</columns>
        <columns>SS_Drop__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assign_To_SS_AM</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SS_Owner__c</columns>
        <columns>Seller_Business_Name__c</columns>
        <columns>Seller_Registration_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Invited</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.InOnboarding</value>
        </filters>
        <label>Assign To SS AM</label>
        <sharedTo>
            <group>SS_Agents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>For_SS_Screening</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Seller_Registration_Email__c</columns>
        <columns>SuperCategory__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>SS_Owner__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Candidate For Onboarding</value>
        </filters>
        <filters>
            <field>SS_Screening__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.CandidateForOnboarding</value>
        </filters>
        <label>For SS Screening - Queue</label>
        <sharedTo>
            <group>SS_Agents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_BD</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities (BD)</label>
        <sharedTo>
            <group>BGM_Users</group>
            <group>CCC_Users</group>
            <group>Softlines_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_SS_Screening_List</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Seller_Registration_Email__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SS_Owner__c</field>
            <operation>equals</operation>
            <value>surya kc</value>
        </filters>
        <filters>
            <field>SS_Owner__c</field>
            <operation>equals</operation>
            <value>balaji rao</value>
        </filters>
        <label>My SS Screening List</label>
        <sharedTo>
            <role>SS_Agent</role>
            <role>SS_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Ready_For_Inviting</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Seller_Business_Name__c</columns>
        <columns>Seller_Registration_Email__c</columns>
        <columns>SuperCategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Ready to Invite</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.InOnboarding</value>
        </filters>
        <label>Ready For Inviting</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Live This Month</label>
    </listViews>
    <recordTypes>
        <fullName>CandidateForOnboarding</fullName>
        <active>true</active>
        <businessProcess>Short</businessProcess>
        <label>CandidateForOnboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>InOnboarding</fullName>
        <active>true</active>
        <businessProcess>Short</businessProcess>
        <label>InOnboarding</label>
    </recordTypes>
    <validationRules>
        <fullName>DelayInDaysCannotBeNone</fullName>
        <active>true</active>
        <description>On Delay Reasons selection, Delay In Days field cannot be &apos;None&apos;</description>
        <errorConditionFormula>AND(
    NOT(ISPICKVAL(Delay_Reasons__c, &quot;&quot;)),
    ISPICKVAL(Attempts_Or_Delay_Days__c, &quot;&quot;)
   )</errorConditionFormula>
        <errorDisplayField>Attempts_Or_Delay_Days__c</errorDisplayField>
        <errorMessage>On Delay Reasons selection, Delay in Days cannot be &apos;--None--&apos;</errorMessage>
    </validationRules>
</CustomObject>